--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -100,11 +100,11 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+#is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+#bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+#bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+#bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+#bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # Switch between previous and next windows with repeatable
 bind -r n next-window
@@ -130,10 +130,10 @@ bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Setup 'v' to begin selection as in Vim
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
-    'bind-key -T copy-mode-vi v send-keys -X begin-selection;'
-
-bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "Copied tmux buffer to system clipboard"
+#if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
+#    'bind-key -T copy-mode-vi v send-keys -X begin-selection;'
+#
+#bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "Copied tmux buffer to system clipboard"
 
 bind-key -r F new-window t
 bind-key -r D run-shell "t ~/.dotfiles"
