--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,3 +1,5 @@
 {
-  "coc.preferences.extensionUpdateCheck": "daily"
+  "coc.preferences.extensionUpdateCheck": "daily",
+  "php-cs-fixer.enable": true,
+  "php-cs-fixer.rules": "@PSR12,@Symfony"
 }
