Fix : dotfiles 경로수정

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -136,5 +136,5 @@ bind c new-window -c "#{pane_current_path}"
 #bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "Copied tmux buffer to system clipboard"
 
 bind-key -r F new-window t
-bind-key -r D run-shell "t ~/.dotfiles"
+bind-key -r D run-shell "t ~/dotfiles"
 
