--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -93,12 +93,15 @@ bind -r l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-# Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+# Smart pane switching with awareness of vim and fzf
+# https://github.com/gfontenot/dotfiles/blob/main/tmux.conf
+forward_programs="view|n?vim?|fzf"
+should_forward="ps -o state= -o comm= -t '#{pane_tty}' \
+  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?($forward_programs)(diff)?$'"
+bind -n C-h if-shell "$should_forward" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$should_forward" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$should_forward" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$should_forward" "send-keys C-l" "select-pane -R"
 
 # Switch between previous and next windows with repeatable
 bind -r n next-window
