--- a/.gitconfig
+++ b/.gitconfig
@@ -66,14 +66,14 @@
             fi; \
         }; f"
     back = "!git branch `git b0`-bak"
-    copy = "! # CopyBranch; \n\
+    copy = "! # CopyBranch and Checkout; \n\
         f() { \
             if [ -z "$1" -a -z "$2"  ]; then \
                 echo 'need arguments'; \
             elif [ -z "$2" ]; then \
-                git branch $1; \
+                git checkout -b $1; \
             else \
-                git branch $2 $1; \
+                git checkout -b $2 $1; \
             fi; \
         }; f"
 
