새로 탭 열때 현재 디렉토리가 아닌 tmux 시작시 사용한 디렉토리로 열기

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -124,7 +124,7 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Change the path for newly created windows
-bind c new-window -c "#{pane_current_path}"
+# bind c new-window -c "#{pane_current_path}"
 
 # Setup 'v' to begin selection as in Vim
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
