phple 대상 확장자 html, htm 추가

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -3,5 +3,5 @@
   "php-cs-fixer.enable": true,
   "php-cs-fixer.rules": "@PSR12,@Symfony",
   "html.filetypes": ["html","handlebars","htmldjango","blade","php"],
-  "phpls.filetypes": ["php"],
+  "phpls.filetypes": ["php","html","htm"],
 }
