tumx 선택, 복사모드 변경

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -130,7 +130,19 @@ bind - split-window -v -c "#{pane_current_path}"
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
     'bind-key -T copy-mode-vi v send-keys -X begin-selection;'
 
-bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "Copied tmux buffer to system clipboard"
+# 'v' 키를 눌러 선택 모드에 진입
+bind-key -T prefix v copy-mode
+
+# 'v' 키를 누르면 선택 모드 시작
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# 'q' 키를 누르면 선택 모드에서 블록 선택 모드로 전환하는 키 바인딩 설정
+bind-key -T copy-mode-vi q send-keys -X rectangle-toggle
+
+# 'y' 키를 눌러 선택한 텍스트를 복사하고 시스템 클립보드에 저장 (macOS)
+bind-key -T copy-mode-vi y send-keys -X copy-selection \; run-shell "tmux save-buffer - | pbcopy" \; send-keys -X cancel
+# linux
+# bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "Copied tmux buffer to system clipboard"
 
 bind-key -r F new-window t
 bind-key -r D run-shell "t ~/dotfiles"
