vim에서 cat명령을 위한 tmux 단축키 추가

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -146,4 +146,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection \; run-shell "tmux save-b
 
 bind-key -r F new-window t
 bind-key -r D run-shell "t ~/dotfiles"
-
+bind-key C-f run-shell "tmux send-keys ':!cat %' C-m ;"
