--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-./nvim/plugged
-./scripts/project_path.example
-./node_modules
-./package.json
-./package-lock.json
+nvim/plugged
+scripts/.project_path.example
+node_modules
+package.json
+package-lock.json
